--- a/index.html
+++ b/index.html
@@ -38,69 +38,52 @@
         <p>Me gustaria compartir un poco de lo que he aprendido en menos de un año de ser consistente dentro del gimnasio.</p></p>
     </div>
 
-
-    <div class="box-2">
-        <div class="card">
-            <img src="mentzer.jpg" alt="Mike">
-            <div class="intro">
-                <h2>Mike Mentzer</h2>
-                <h2>"El maestro de la intensidad"</h2>
-                <p> Mike Mentzer, que revolucionó el culturismo con sus principios de entrenamiento de alta intensidad, ejemplificó el poder de los entrenamientos brutales y concentrados; su mentalidad estaba décadas adelantada a su tiempo.</p>
+    <div class="container">
+        <!--image row start-->
+        <div class="row">
+          <!--image card start-->
+          <div class="image">
+            <img src="mentzer.jpg" alt="">
+            <div class="details">
+              <h2>Mike <span>Mentzer</span></h2>
+              <div class="more">
+                <p>Mike Mentzer, que revolucionó el culturismo con sus principios de entrenamiento de alta intensidad, ejemplificó el poder de los entrenamientos brutales y concentrados; su mentalidad estaba décadas adelantada a su tiempo.</p>
+              </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="platz.jpg" alt="Platz">
-            <div class="intro">
-                <h2>Tom Platz</h2>
-                <h2>"The Quadfather"</h2>
-                <p> Reconocido por su incomparable desarrollo de piernas, Tom Platz redefinió el entrenamiento de piernas con su increíble dedicación y sus monstruosas sentadillas, mi mayor motivación con diferencia.</p>
+          </div>
+          <!--image card end-->
+          <!--image card start-->
+          <div class="image">
+            <img src="platz.jpg" alt="">
+            <div class="details">
+              <h2>Tom <span>Platz</span></h2>
+              <div class="more">
+                  
+                <p>Reconocido por su incomparable desarrollo de piernas, Tom Platz redefinió el entrenamiento de piernas con su increíble dedicación y sus monstruosas sentadillas, mi mayor motivación con diferencia.</p>
+              </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="levrone.jpg" alt="Levrone">
-            <div class="intro">
-                <h2>Kevin Levrone</h2>
-                <h2>"The Uncrowned King"</h2>
-                <p> Celebrado por su físico excepcional y sus numerosas veces como 2do lugar, sigue siendo el rey sin corona definitivo del deporte, encarnando la resistencia y la excelencia en el culturismo.</p>
+          </div>
+          <!--image card end-->
+          <!--image card start-->
+          <div class="image">
+            <img src="levrone.jpg" alt="">
+            <div class="details">
+              <h2>Kevin <span>Levrone</span></h2>
+              <div class="more">
+                  <p>Celebrado por su físico excepcional y sus numerosas veces como 2do lugar, sigue siendo el rey sin corona definitivo del deporte, encarnando la resistencia y la excelencia en el culturismo.</p>
+              </div>
             </div>
+          </div>
+          <!--image card end-->
         </div>
-    </div>
+        <!--image row end-->
+  
+      </div>
+      <!--image card layout end-->
     
 <div class="box-3">
 <h1>ARMS</h1>
 </div>
-
-<div class="box-2">
-    <div class="arm">
-        <img src="mentzer.jpg" alt="Mike">
-        <div class="intro">
-            <h2>Mike Mentzer</h2>
-            <h2>"El maestro de la intensidad"</h2>
-            <p> Mike Mentzer, que revolucionó el culturismo con sus principios de entrenamiento de alta intensidad, ejemplificó el poder de los entrenamientos brutales y concentrados; su mentalidad estaba décadas adelantada a su tiempo.</p>
-        </div>
-    </div>
-    <div class="arm">
-        <img src="platz.jpg" alt="Platz">
-        <div class="intro">
-            <h2>Tom Platz</h2>
-            <h2>"The Quadfather"</h2>
-            <p> Reconocido por su incomparable desarrollo de piernas, Tom Platz redefinió el entrenamiento de piernas con su increíble dedicación y sus monstruosas sentadillas, mi mayor motivación con diferencia.</p>
-        </div>
-    </div>
-    <div class="arm">
-        <img src="levrone.jpg" alt="Levrone">
-        <div class="intro">
-            <h2>Kevin Levrone</h2>
-            <h2>"The Uncrowned King"</h2>
-            <p> Celebrado por su físico excepcional y sus numerosas veces como 2do lugar, sigue siendo el rey sin corona definitivo del deporte, encarnando la resistencia y la excelencia en el culturismo.</p>
-        </div>
-    </div>
 </div>
-
-</div>
-</div>
-</div>
-
-
 </body>
 </html>
