--- a/index.html
+++ b/index.html
@@ -97,25 +97,42 @@
 </div>
 
 <div class="contain">
-    <div class="row">
+    <div class="row-1">
 
     <div class="box-4">
 
             <h1>Bicep</h1>
-            <p>Mike Mentzer, que revolucionó el culturismo con sus principios de entrenamiento de alta intensidad, ejemplificó el poder de los entrenamientos brutales y concentrados; su mentalidad estaba décadas adelantada a su tiempo.</p>
+            <ul>Preacher Curl</ul>
+            <ul>Cross-Body Hammer Curl</ul>
+            <ul>Straightbar Curl</ul>
 
     </div>
     <div class="box-4">
 
             <h1>Tricep</h1>
-            <p>Mike Mentzer, que revolucionó el culturismo con sus principios de entrenamiento de alta intensidad, ejemplificó el poder de los entrenamientos brutales y concentrados; su mentalidad estaba décadas adelantada a su tiempo.</p>
+            <ul>Skullcrushers</ul>
+            <ul>Straightbar Pushdown</ul>
+            <ul>Cable Single arm pushdown</ul>
 
     </div>
         <div class="box-4">
 
             <h1>Deltoides</h1>
-            <p>Mike Mentzer, que revolucionó el culturismo con sus principios de entrenamiento de alta intensidad, ejemplificó el poder de los entrenamientos brutales y concentrados; su mentalidad estaba décadas adelantada a su tiempo.</p>
+            <h1>Front Delt</h1>
+            <ul>Preacher Curl</ul>
+            <ul>Cross-Body Hammer Curl</ul>
+            <ul>Straightbar Curl</ul>
 
+            <h1>Side Delt</h1>
+            <ul>Preacher Curl</ul>
+            <ul>Cross-Body Hammer Curl</ul>
+            <ul>Straightbar Curl</ul>
+
+            <h1>Rear Delt</h1>
+            <ul>Preacher Curl</ul>
+            <ul>Cross-Body Hammer Curl</ul>
+            <ul>Straightbar Curl</ul>
+            
         </div>
     </div>
 </div>
