--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <h1>Disciplina sobre motivación: mi perspectiva personal sobre el culturismo </h1>
     <h3><span>Mi experiencia</span></h3>
-    <p>ppeepepepe
+    <p>Comencé a ir al gimnasio en julio de 2023, después de muchos intentos fallidos de ser consistente en el gimnasio durante 2022, entre a un gimnasio de gobierno junto a mi papa donde tengo mis primeras memorias de ver cambios fisicos, mi primo Eugenio me enseñó los conceptos básicos y principios del culturismo, aunque durante los primeros 4 meses no tomé en serio la nutrición, salia de fiesta y faltaba cada viernes, en el mes de octubre fue cuando empeze a ver cambios fisicos y decidi tomarlo un poco mas enserio, investigue sobre terminos como la hipertrofia, el fallo muscular, cuantas repeticiones hacer y los mejores ejercicios para cada grupo muscular, aunque con el tiempo van cambiando debido a mis preferencias nunca fui de experimentar mucho, desde temprano segui los consejos de Mike Mentzer con su entrenamiento de poco volumen y alta intensidad y dieta alta en carbohidratos, en diciembre me cambie de gimnasio a uno mas solitario donde me podia concentrar mas, ahi deje las maquinas de lado para empezar a hacer pesos libres.
         <p>Me gustaria compartir un poco de lo que he aprendido en menos de un año de ser consistente dentro del gimnasio.</p></p>
     </div>
 
