--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
     <div class="row-1">
 
     <div class="box-4">
-
-            <h1>Bicep</h1>
+            <h1>Bicep</h1> 
             <ul>Preacher Curl</ul>
             <ul>Cross-Body Hammer Curl</ul>
             <ul>Straightbar Curl</ul>
@@ -118,26 +117,43 @@
         <div class="box-4">
 
             <h1>Deltoides</h1>
-            <h1>Front Delt</h1>
-            <ul>Preacher Curl</ul>
-            <ul>Cross-Body Hammer Curl</ul>
-            <ul>Straightbar Curl</ul>
+            <h3>Front Delt</h3>
+            <ul>Shoulder Press</ul>
 
-            <h1>Side Delt</h1>
-            <ul>Preacher Curl</ul>
-            <ul>Cross-Body Hammer Curl</ul>
-            <ul>Straightbar Curl</ul>
+            <h3>Side Delt</h3>
+            <ul>Cable Lateral Raises</ul>
 
-            <h1>Rear Delt</h1>
-            <ul>Preacher Curl</ul>
-            <ul>Cross-Body Hammer Curl</ul>
-            <ul>Straightbar Curl</ul>
-            
+            <h3>Rear Delt</h3>
+            <ul>Face Pull</ul>
         </div>
     </div>
 </div>
 
 
+<div class="box-5">
+  <h1>Pecho y Espalda</h1>
+  </div>
+
+<div class="contain">
+  <div class="row-1">
+
+  <div class="box-4">
+          <h1>Pecho</h1> 
+          <ul>Incline Press</ul>
+          <ul>Seated Chest Press</ul>
+          <ul>Chest Flies</ul>
+
+  </div>
+  <div class="box-4">
+
+          <h1>Espalda</h1>
+          <ul>Lat Pulldowns</ul>
+          <ul>Chest Supported T-bar Rows</ul>
+          <ul>Iso-lateral Rows</ul>
+
+  </div>
+  </div>
+</div>
 
 
 
