ejercicios, pierna, fondo, ul, li

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<body background="arnold.jpg">
+<body background="arnoldd.jpg">
 
     <header>
 
@@ -112,6 +112,7 @@
             <ul>Skullcrushers</ul>
             <ul>Straightbar Pushdown</ul>
             <ul>Cable Single arm pushdown</ul>
+          
 
     </div>
         <div class="box-4">
@@ -141,7 +142,7 @@
           <h1>Pecho</h1> 
           <ul>Incline Press</ul>
           <ul>Seated Chest Press</ul>
-          <ul>Chest Flies</ul>
+          <ul>Cable Chest Flies</ul>
 
   </div>
   <div class="box-4">
@@ -155,8 +156,22 @@
   </div>
 </div>
 
+<div class="box-5">
+  <h1>Pierna</h1>
+  </div>
 
-
+  <div class="contain">
+    <div class="row-1">
+  
+    <div class="box-4">
+           <h1>Pierna</h1> 
+            <ul>Back Squat</ul>
+            <ul>Romanian Deadlift (RDL)</ul>
+            <ul>Seated / Standind Calf Raises</ul>
+            <ul>Leg Extension</ul>
+    </div>
+    </div>
+  </div>
 
 
 
